--- a/index.html
+++ b/index.html
@@ -26,16 +26,33 @@
     </header>
 
     <section class="hero">
-        <img src="https://images.unsplash.com/photo-1575936123452-b67c3203c357?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8aW1hZ2V8ZW58MHx8MHx8fDA%3D" alt="">
+        <img src="https://img.freepik.com/free-vector/abstract-watercolor-pastel-background_87374-139.jpg" alt="">
         <div>
-            <h3>Francis Casedo</h3>
-            <h2>Test1</h2>
-            <p>Test 2</p>
-            <button">Button</button>
+            <h3>Francis Christian M. Casedo</h3>
+            <h2>Resume</h2>
+            <button>La lang</button>
         </div>
     </section>
 
     <section class="academic" id="academic">
+
+        <h5>Elementary</h5>
+        <div>
+            <div>
+                <h1>Pasig (Chinese) Communnity School</h1>
+                <h3>2010 - 2015</h3>
+                <h3>Grade 1 - Grade 5</h3>
+                <p>With Honors, Best in several subjects </p>
+            </div>
+        </div>
+        <div>
+            <div>
+                <h1>St. Edward Integrated School</h1>
+                <h3>2015 - 2016</h3>
+                <h3>Grade 6</h3>
+                <p>With honors, best in 1 subject (?)</p>
+            </div>
+        </div>
         <h4>High School</h4>
         <div>
             <div>
@@ -54,34 +71,17 @@
                 <h1>Fiat Lux Academe</h1>
                 <h3>2020 - 2023</h3>
                 <h3>Grade 10 - Grade 12</h3>
-                <p>With honors</p>
+                <p>ICT, With honors</p>
             </div>
-        </div>
-        <h5>Elementary</h5>
-        <div>
-            <div>
-                <h1>Feu tech</h1>
-                <h3></h3>
-            </div>
-            <h3>Grade 7 - Grade 9</h3>
-            <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div>
-            <div>
-                <h1>Feu tech</h1>
-                <h3>What year and ended the year</h3>
-            </div>
-            <h3></h3>
-            <p>Lorem ipsum dolor sit amet.</p>
         </div>
         <h6>Undergraduate</h6>
         <div>
             <div>
                 <h1>Far Eastern Unviveristy of Technology</h1>
                 <h3>1st Year</h3>
+                <h3>BSIT Specialization in Cybersecurity</h3>
+                 <p>1st place in Scrabble competition</p>
             </div>
-            <h3>Description</h3>
-            <p></p>
         </div>
     </section>
 </body>
