--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button>
                 <p>Projects</p>
             </button>
-            <h1>Francis Casedo</h1>
+            <h1>Francis Christian M. Casedo</h1>
             <button>
                 <p>Skills</p>
             </button>
