--- a/index.html
+++ b/index.html
@@ -7,50 +7,67 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<body>
+<body background="wala pa">
     <header>
         <nav>
-            <a href="#academic">
+            <a href="#Personal">
+                <p>About me</p>
+            </a href="Personal">
+            <a href="#Education">
                 <p>Education</p>
-            </a href="academic">
-            <button>
-                <p>Projects</p>
-            </button>
+            </a href="Education">
             <h1>Francis Christian M. Casedo</h1>
-            <button>
+            <a href="#Skills">
                 <p>Skills</p>
-            </button>
-            <button>
+            </a href="Skills">
+            <a href="#Hobbies">
                 <p>Hobbies</p>
-          </button>
+          </a href="Hobbies">
         </nav>
     </header>
-
-    <section class="hero">
-        <img src="https://img.freepik.com/free-vector/abstract-watercolor-pastel-background_87374-139.jpg" alt="">
+    <section class="Header">
+        <img src="./assets/img/414118395_894558852128003_3860120056413285457_n.jpg" alt="">
         <div>
             <h3>Francis Christian M. Casedo</h3>
             <h2>Resume</h2>
-            <button>La lang</button>
+            <p>Placeholder lng </p>
         </div>
     </section>
 
-    <section class="academic" id="academic">
+    <section class="Personal" id="Personal">
+        <h1>About Me</h1>
+        <div>
+                <h2><span style="font-weight:bold;">Full name:</span> Francis Christian M. Casedo</h2>
+                <h2><span style="font-weight:bold;">Date of birth: </span>September 09, 2005</h2>
+                <h2><span style="font-weight:bold;">Place of birth: </span> Manila</h2>
+                <h2><span style="font-weight:bold;">Sex: </span>M</h2>
+                <h2><span style="font-weight:bold;">Civil Status: </span>Single</h2>
+                <h2><span style="font-weight:bold;">Height:</span>5'8</h2>
+                <h2><span style="font-weight:bold;">Weight:</span> 74kg</h2>
+                <h2><span style="font-weight:bold;">Relgion: </span>Protestant</h2>
+                <h2><span style="font-weight:bold;">Permanent Address: </span>Block 10, lot 6 Lavender Street, Manchester 8, Lancaster New city, Navarro, General Trias, Cavite</h2>
+        </div>
+    </section class="Personal">
 
+    
+
+    <section class="Education" id="Education">
+
+        <h7>Education</h7>
         <h5>Elementary</h5>
         <div>
             <div>
                 <h1>Pasig (Chinese) Communnity School</h1>
-                <h3>2010 - 2015</h3>
-                <h3>Grade 1 - Grade 5</h3>
+                <h2 >2010 - 2015</h2>
+                <h2>Grade 1 - Grade 5</h2>
                 <p>With Honors, Best in several subjects </p>
             </div>
         </div>
         <div>
             <div>
                 <h1>St. Edward Integrated School</h1>
-                <h3>2015 - 2016</h3>
-                <h3>Grade 6</h3>
+                <h2>2015 - 2016</h2>
+                <h2>Grade 6</h2>
                 <p>With honors, best in 1 subject (?)</p>
             </div>
         </div>
@@ -58,29 +75,29 @@
         <div>
             <div>
                 <h1>St. Edward Integrated School</h1>
-                <h3>2018 - 2019</h3>
-                <h3>Grade 7 - Grade 8</h3>
+                <h2>2017 - 2019</h2>
+                <h2>Grade 7 - Grade 8</h2>
                 <p>No achievements</p>
             </div>
             <div>
                 <h1>Claremont Integrated school</h1>
-                <h3>2019 - 2020</h3>
-                <h3>Grade 9</h3>
+                <h2>2019 - 2020</h2>
+                <h2>Grade 9</h2>
                 <p>No achievement</p>
             </div>
             <div>
                 <h1>Fiat Lux Academe</h1>
-                <h3>2020 - 2023</h3>
-                <h3>Grade 10 - Grade 12</h3>
+                <h2>2020 - 2023</h2>
+                <h2>Grade 10 - Grade 12</h2>
                 <p>ICT, With honors</p>
             </div>
         </div>
-        <h6>Undergraduate</h6>
+        <h6>Tertiary</h6>
         <div>
             <div>
                 <h1>Far Eastern Unviveristy of Technology</h1>
-                <h3>1st Year</h3>
-                <h3>BSIT Specialization in Cybersecurity</h3>
+                <h2>1st Year</h2>
+                <h2>BSIT Specialization in Cybersecurity</h2>
                  <p>1st place in Scrabble competition</p>
             </div>
         </div>
