Added Traversal of pages and overall biggest change

--- a/index.html
+++ b/index.html
@@ -7,98 +7,34 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<body background="wala pa">
+<body background="./assets/img/Ivory background.png">
     <header>
         <nav>
-            <a href="#Personal">
-                <p>About me</p>
-            </a href="Personal">
-            <a href="#Education">
+            <a href="wala">
+                <p>Home</p>
+            </a href="wala">
+            <a href="./pages/page1/index.html">
+                <p>Personal Details</p>
+            </a href="./pages/page1/index.html">
+            <a href="./pages/page2/index.html">
                 <p>Education</p>
-            </a href="Education">
-            <h1>Francis Christian M. Casedo</h1>
-            <a href="#Skills">
-                <p>Skills</p>
-            </a href="Skills">
-            <a href="#Hobbies">
-                <p>Hobbies</p>
-          </a href="Hobbies">
+            </a href="./pages/page2/index.html">
+            <a href="./pages/page3/index.html">
+                <p>Hobbies & skills</p>
+            </a href="./pages/page3/index.html">
         </nav>
     </header>
-    <section class="Header">
-        <img src="./assets/img/414118395_894558852128003_3860120056413285457_n.jpg" alt="">
-        <div>
-            <h3>Francis Christian M. Casedo</h3>
-            <h2>Resume</h2>
-            <p> </p>
-        </div>
+    <section class="Front">
+    <div>
+    <h3>Francis Christian M. Casedo</h3>
+    <h3>Resume</h3>
+    </div>
+
     </section>
 
-    <section class="Personal" id="Personal">
-        <h1>About Me</h1>
-        <div>
-                <h2><span style="font-weight:bold;">Full name:</span> Francis Christian M. Casedo</h2>
-                <h2><span style="font-weight:bold;">Date of birth: </span>September 09, 2005</h2>
-                <h2><span style="font-weight:bold;">Place of birth: </span> Manila</h2>
-                <h2><span style="font-weight:bold;">Sex: </span>M</h2>
-                <h2><span style="font-weight:bold;">Civil Status: </span>Single</h2>
-                <h2><span style="font-weight:bold;">Height:</span>5'8</h2>
-                <h2><span style="font-weight:bold;">Weight:</span> 74kg</h2>
-                <h2><span style="font-weight:bold;">Relgion: </span>Protestant</h2>
-                <h2><span style="font-weight:bold;">Permanent Address: </span>Block 10, lot 6 Lavender Street, Manchester 8, Lancaster New city, Navarro, General Trias, Cavite</h2>
-        </div>
-    </section class="Personal">
-
-    <section class="Education" id="Education">
-
-        <h7>Education</h7>
-        <h5>Elementary</h5>
-        <div>
-            <div>
-                <h1>Pasig (Chinese) Communnity School</h1>
-                <h2 >2010 - 2015</h2>
-                <h2>Grade 1 - Grade 5</h2>
-                <p>With Honors, Best in several subjects </p>
-            </div>
-        </div>
-        <div>
-            <div>
-                <h1>St. Edward Integrated School</h1>
-                <h2>2015 - 2016</h2>
-                <h2>Grade 6</h2>
-                <p>With honors, best in 1 subject (?)</p>
-            </div>
-        </div>
-        <h4>High School</h4>
-        <div>
-            <div>
-                <h1>St. Edward Integrated School</h1>
-                <h2>2017 - 2019</h2>
-                <h2>Grade 7 - Grade 8</h2>
-                <p>No achievements</p>
-            </div>
-            <div>
-                <h1>Claremont Integrated school</h1>
-                <h2>2019 - 2020</h2>
-                <h2>Grade 9</h2>
-                <p>No achievement</p>
-            </div>
-            <div>
-                <h1>Fiat Lux Academe</h1>
-                <h2>2020 - 2023</h2>
-                <h2>Grade 10 - Grade 12</h2>
-                <p>ICT, With honors</p>
-            </div>
-        </div>
-        <h6>Tertiary</h6>
-        <div>
-            <div>
-                <h1>Far Eastern Unviveristy of Technology</h1>
-                <h2>1st Year</h2>
-                <h2>BSIT Specialization in Cybersecurity</h2>
-                 <p>1st place in Scrabble competition</p>
-            </div>
-        </div>
+    <section class="button">
+        <button onclick="location.href='./pages/page1/index.html'"><p>About me</p></button>
+        <button onclick="location.href='./pages/page2/index.html'"><p>Education</p></button>
+        <button onclick="location.href='./pages/page3/index.html'"><p>Hobies & skills</p></button>
     </section>
-</body>
-</html>
+
