Fixed error where clicking Home has an error

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body background="./assets/img/Ivory background.png">
     <header>
         <nav>
-            <a href="wala">
+            <a href="#button">
                 <p>Home</p>
-            </a href="wala">
+            </a href="button">
             <a href="./pages/page1/index.html">
                 <p>Personal Details</p>
             </a href="./pages/page1/index.html">
