--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </section>
 
     <section class="button">
-        <button onclick="location.href='./pages/page1/index.html'"><p>About me</p></button>
+        <button onclick="location.href='./pages/page1/index.html'"><p>Personal Details</p></button>
         <button onclick="location.href='./pages/page2/index.html'"><p>Education</p></button>
-        <button onclick="location.href='./pages/page3/index.html'"><p>Hobies & skills</p></button>
+        <button onclick="location.href='./pages/page3/index.html'"><p>Hobbies & skills</p></button>
     </section>
 
