feat(pages): Added buttons that go to the final Project

--- a/pages/page2/index.html
+++ b/pages/page2/index.html
@@ -16,13 +16,16 @@
             <a href="../page1/index.html">
                 <p>Personal Details</p>
             </a href="../page1/index.html">
-            <h1>Francis Christian M. Casedo</h1>
             <a href="#Education">
                 <p>Education</p>
             </a href="Education">
+            <h1>Francis Christian M. Casedo</h1>
             <a href="../page3/index.html">
                 <p>Hobbies & skills</p>
             </a href="../page3/index.html">
+            <a href="https://franciscasedo.github.io/WD-Final-Project/pages/Project/index.html">
+                <p>Back to Final Page?</p>
+            </a>
         </nav>
     </header>
     
