--- a/pages/page3/index.html
+++ b/pages/page3/index.html
@@ -17,13 +17,16 @@
             <a href="../page1/index.html">
                 <p>Personal Details</p>
             </a href="../page1/index.html">
-            <h1>Francis Christian M. Casedo</h1>
             <a href="../page2/index.html">
                 <p>Education</p>
             </a href="../page2/index.html">
+            <h1>Francis Christian M. Casedo</h1>
             <a href="#Skills">
                 <p>Hobbies & skills</p>
             </a href="Skills">
+            <a href="https://franciscasedo.github.io/WD-Final-Project/pages/Project/index.html">
+                <p>Back to Final Page?</p>
+            </a>
         </nav>
     </header>
 
