--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <a href="./pages/page3/index.html">
                 <p>Hobbies & skills</p>
             </a href="./pages/page3/index.html">
+            <a href="https://franciscasedo.github.io/WD-Final-Project/pages/Project/index.html">
+                <p>Back to Final Page?</p>
+            </a>
         </nav>
     </header>
     <section class="Front">
